030-software/fluxcd/apps/vaultwarden/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  annotations:
    dashboard.${domain}/icon: lock
    dashboard.${domain}/name: vaultwarden
    dashboard.${domain}/url: https://vaultwarden.${domain}
spec:
  hostnames:
  - vaultwarden.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: vaultwarden
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
